@@ -18,19 +18,20 @@ subprojects {
     targetCompatibility = 1.8
 
     ext {
-        slf4jApiVersion='1.7.7'
-        logbackVersion='1.1.3'
-        h2Version='1.4.192'
-        jsonVersion='20090211'
-        jcalendarVersion='1.4'
-        jcommonVersion='1.0.23'
-        jfreechartVersion='1.0.19'
-        jettyServletApiVersion='3.1.0.M3'
-        jettyVersion='9.4.6.v20170531'
-        httpclientVersion='4.5'
-        httpcoreVersion='4.4.1'
-        commonsloggingVersion='1.1.1'
-        junitVersion='4.12'
+        slf4jApiVersion = '1.7.7'
+        logbackVersion = '1.1.3'
+        h2Version = '1.4.192'
+        jsonVersion = '20090211'
+        jcalendarVersion = '1.4'
+        jcommonVersion = '1.0.23'
+        jfreechartVersion = '1.0.19'
+        jettyServletApiVersion = '3.1.0.M3'
+        jettyVersion = '9.4.6.v20170531'
+        httpclientVersion = '4.5'
+        httpcoreVersion = '4.4.1'
+        commonsloggingVersion = '1.1.1'
+        junitVersion = '4.12'
+//        moduleName = project.name
     }
 
     repositories {
@@ -55,7 +56,40 @@ subprojects {
         }
     }
 
+//    compileJava {
+//        inputs.property("moduleName", moduleName)
+//        doFirst {
+//            options.compilerArgs = [
+//                    '--module-path', classpath.asPath,
+//            ]
+//            classpath = files()
+//        }
+//    }
+
+//    compileTestJava {
+//        inputs.property("moduleName", moduleName)
+//        doFirst {
+//            options.compilerArgs = [
+//                    '--module-path', classpath.asPath,
+//                    '--add-modules', 'junit',
+//                    '--add-reads', "$moduleName=junit",
+//                    '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
+//            ]
+//            classpath = files()
+//        }
+//    }
+
     test {
+//        inputs.property("moduleName", moduleName)
+//        doFirst {
+//            jvmArgs = [
+//                    '--module-path', classpath.asPath,
+//                    '--add-modules', 'ALL-MODULE-PATH',
+//                    '--add-reads', "$moduleName=junit",
+//                    '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
+//            ]
+//            classpath = files()
+//        }
         systemProperty "jminor.db.type", "h2"
         systemProperty "jminor.db.host", "h2db"
         systemProperty "jminor.db.embedded", "true"
